<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:clickable="true"
    android:orientation="vertical"
    android:padding="20.0dip">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@color/white"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/title"
            style="@style/text_18_ffffff"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Info"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textSize="30sp"
            android:textColor="@color/monsoon"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/message"
            style="@style/text_16_666666"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:gravity="left|center"
            android:lineSpacingMultiplier="1.5"
            android:padding="5dp"
            android:text="@string/info_0db" />

        <TextView
            style="@style/text_16_666666"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/cyan"
            android:gravity="left|center"
            android:lineSpacingMultiplier="1.5"
            android:padding="5dp"
            android:text="@string/info_30db" />

        <TextView
            style="@style/text_16_666666"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/cyan"
            android:gravity="left|center"
            android:lineSpacingMultiplier="1.5"
            android:padding="5dp"
            android:text="@string/info_50db" />

        <TextView
            style="@style/text_16_666666"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/cyan"
            android:gravity="left|center"
            android:lineSpacingMultiplier="1.5"
            android:padding="5dp"
            android:text="@string/info_70db" />

        <TextView
            style="@style/text_16_666666"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/yellow"
            android:gravity="left|center"
            android:lineSpacingMultiplier="1.5"
            android:padding="5dp"
            android:text="@string/info_90db" />

        <TextView
            style="@style/text_16_666666"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/yellow"
            android:gravity="left|center"
            android:lineSpacingMultiplier="1.5"
            android:padding="5dp"
            android:text="@string/info_120db" />

        <TextView
            android:id="@+id/textView3"
            style="@style/text_16_666666"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/red"
            android:gravity="left|center"
            android:lineSpacingMultiplier="1.5"
            android:padding="5dp"
            android:text="@string/info_150db" />

        <TextView
            android:id="@+id/textView4"
            style="@style/text_16_666666"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/black"
            android:gravity="left|center"
            android:lineSpacingMultiplier="1.5"
            android:padding="5dp"
            android:text="@string/info_160db" />

        <Button
            android:id="@+id/negativeButton"
            style="@style/text_15_666666_sdw"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/mygreen"
            android:gravity="center"
            android:text="Ok"
            android:textColor="#fff" />
    </LinearLayout>

</FrameLayout>