<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MeasureActivity">

    <TextView
        android:id="@+id/minVal"
        android:layout_width="79dp"
        android:layout_height="80dp"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="8dp"
        android:text="TextView"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/add_bttn"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/minLabel"
        android:layout_width="79dp"
        android:layout_height="23dp"
        android:text="@string/activity_minlabel"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/minVal"
        app:layout_constraintEnd_toEndOf="@+id/minVal"
        app:layout_constraintStart_toStartOf="@+id/minVal" />

    <TextView
        android:id="@+id/maxLabel"
        android:layout_width="79dp"
        android:layout_height="23dp"
        android:text="@string/activity_maxlabel"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/maxVal"
        app:layout_constraintEnd_toEndOf="@+id/maxVal"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/maxVal" />

    <TextView
        android:id="@+id/maxVal"
        android:layout_width="79dp"
        android:layout_height="80dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="8dp"
        android:text="TextView"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="@+id/minVal"
        app:layout_constraintEnd_toStartOf="@+id/aveVal"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toEndOf="@+id/minVal"
        app:layout_constraintTop_toBottomOf="@+id/minLabel" />

    <TextView
        android:id="@+id/aveLabel"
        android:layout_width="79dp"
        android:layout_height="23dp"
        android:text="@string/activity_avglabel"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/aveVal"
        app:layout_constraintEnd_toEndOf="@+id/aveVal"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/aveVal" />

    <TextView
        android:id="@+id/aveVal"
        android:layout_width="79dp"
        android:layout_height="80dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="8dp"
        android:text="TextView"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="@+id/maxVal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/maxVal"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/refresh_bttn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="refresh"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/quest_bttn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="quest"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/add_bttn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="8dp"
        android:text="@string/activity_add"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/abort_bttn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="16dp"
        android:text="@string/activity_abort"
        app:layout_constraintBottom_toBottomOf="@+id/add_bttn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.894"
        app:layout_constraintStart_toEndOf="@+id/add_bttn"
        app:layout_constraintTop_toTopOf="@+id/add_bttn" />

</android.support.constraint.ConstraintLayout>